--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<p>Miguel Torres</p>
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <title>COVID 19 Pandemic Timeline</title>
+   </head>
+
+   <body>
+       <h1> 
+        End of December 2019 and Begining of January 2020
+        
+       </h1>
+       <p>
+        On 31 December 2019, the WHO China Country Office was informed of cases of pneumonia of
+        unknown etiology (unknown cause) detected in Wuhan City, Hubei Province of China. 
+        The 44 patients reported with pneumonia of unknown etiology were reported to WHO by the 
+        national authorities in China. Of the 44 cases reported, 11 were severely ill, 
+        while the remaining 33 patients were in stable condition. 
+       </p>
+
+   </body>
+</html>
