changed to March 2020 to test git

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             joint mission can be found here: https://www.who.int/docs/default-source/coronaviruse/who-china-joint-mission-on-covid-19-final-report.pdf
         </p>
         <h1>
-            March
+            March 2020
         </h1>
         <p>
             WHO and partners launch the Solidarity Trial, an international clinical trial that aimed
