fixed pictures-images, testing now

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
              reported that global coronavirus infections were on track to reach 350,000. 
              
             </p>
-            <img src="idUSRTS35YDP&psig=AOvVaw18vUoAn0ByqgQMgne0eeh0&ust=1589671549421000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPCW1ZKCt-kCFQAAAAAdAAAAABAD"
+            <img src="Italy's Hospital.jpg"
              alt="Picture of Hospital in Italy"> 
             <h2>
              April 2020
@@ -96,7 +96,7 @@
              cases to close to 115,000. Russia became the eighth hardest hit country in the world
              in terms of the number of confirmed cases. Nationwide, Russia recorded 1,169 coronavirus
              deaths, which is low among countries with that many cases. 
-             <img src="https://www.wallpaperflare.com/landscape-photo-of-castle-kremlin-moscow-russia-capital-wallpaper-wmmqh"
+             <img src="kremlin-moscow-russia-capital.jpg"
               alt="Picture of The Kremlin, Moscow"> 
             </p>
         
