--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </p>
             <img src="Wuhan City.jpg" alt="Picture of Wuhan City">
             <h2>
-             January
+             January 2020
             </h2>
             <p>
              From 22-23 January 2020, The WHO Director- General convened an Emergency Committee (EC). The independent
@@ -49,7 +49,7 @@
             </p>
             <img src="world-health-organization-officeHQ.jpg" alt="Picture of WHO Headquarters">
             <h2>
-             February
+             February 2020
             </h2>
             <p>
              The WHO-China Joint mission, which included experts from Canada, Germany, Japan, Nigeria, 
