--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
    <head>
     <title>WOD COVID19 Pandemic Timeline</title>
+    <link rel="stylesheet" href="styles.css">
           
    </head>
 
