more changes: img, fints on CSS

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             COVID 19 Pandemic Highlights
           </h1>
            <ol>
-            <li><a href="#december">Virus Reported to WHO</a></li>
-            <li><a href="#january">Virus Reported to WHO</a>January 2020</li>
-            <li><a href="#february">Virus Reported to WHO</a>February 2020</li>
-            <li><a href="#march">Virus Reported to WHO</a>March 2020</li>
-            <li><a href="#april">Virus Reported to WHO</a>April 2020</li>
-            <li><a href="#may">Virus Reported to WHO</a>May 2020</li>
+            <li><a href="#december"></a>Virus Reported to WHO</li>
+            <li><a href="#january"></a>January 2020</li>
+            <li><a href="#february"></a>February 2020</li>
+            <li><a href="#march"></a>March 2020</li>
+            <li><a href="#april"></a>April 2020</li>
+            <li><a href="#may"></a>May 2020</li>
           </ol>
        </header>
       <main>
