--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
            <a href="https://www.nbcnews.com/health/health-news/coronavirus-timeline-tracking-critical-moments-covid-19-n1154341">
               NBC News</a>
           </p> 
+          <p>&copy; 2020 Miguel Torres -  Assignment #4</p>
        </footer>
         
 
