changes to first picture

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
    <head>
     <title>WOD COVID19 Pandemic Timeline</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+      .img-container {
+        text-align: center;
+      }
+    </style>
     
    </head>
 
@@ -36,7 +41,9 @@
              while the remaining 33 patients were in stable condition. 
             
             </p>
-            <img src="images/Wuhan City.jpg" class="w3-border w3-paddign" alt="Picture of Wuhan City">
+            <div class="img-container">
+             <img src="images/Wuhan City.jpg" class="w3-border" alt="Picture of Wuhan City" style="padding:4px;width:50%">
+            </div>
           </section>
 
           <section>
